# impossible-callback

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
benchmarks/: CMakeLists.txt  FastDelegate.h  bench-helper.cpp  bench-helper.hpp  benchmarks.cpp
examples/: CMakeLists.txt  example.cpp
include/impossible-callback/: impossible-callback.hpp
